--- a/src/styles/prism.css
+++ b/src/styles/prism.css
@@ -7,7 +7,7 @@
 
  code[class*="language-"],
  pre[class*="language-"] {
-     @apply text-primary;
+     @apply from-foreground;
      background-color: transparent;
      font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace; /* this is the default */
      /* The following properties are standard, please leave them as they are */
@@ -67,9 +67,7 @@
  
  .token.comment,
  .token.prolog,
- .token.cdata {
-     @apply text-zinc-400/90;
- }
+
  
  .token.punctuation {
      color: #7b6995;
@@ -111,9 +109,7 @@
  .token.attr-value,
  .token.regex,
  .token.char,
- .token.string {
-     @apply text-emerald-500;
- }
+
  
  .token.entity,
  .token.url,
@@ -137,3 +133,15 @@
  .token.namespace {
      opacity: 0.7;
  }
+
+ .linenumber {
+    @apply text-foreground/30;
+ }
+
+ .token.string {
+    @apply text-emerald-500;
+}
+
+.token.cdata {
+    @apply text-zinc-400/90;
+}
