feat: basic dev.to data fetching and rendering

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -68,9 +68,10 @@
 
 @layer base {
   * {
-    @apply border-border;
+    @apply border-border scroll-smooth;
   }
   body {
     @apply bg-background text-foreground;
   }
 }
+
