--- a/src/styles/prism/dark.css
+++ b/src/styles/prism/dark.css
@@ -3,9 +3,9 @@
     --color-bg-code-block: #161b22;
     --color-bg-inline-code-block: rgb(110 118 129 / 40%);
     --color-gray: #8b949e;
-    --color-red: #fd5347;
+    --color-red: var(--editor-text-primary);
+	--color-blue: var(--editor-text-secondary);
     --color-green: #61e96c;
-    --color-blue: #89c0f0;
     --color-indigo: #a5d6ff;
     --color-purple: #d2a8ff;
     --color-brown: #ffa657;
