--- a/src/styles/prism/light.css
+++ b/src/styles/prism/light.css
@@ -4,9 +4,9 @@
 	--color-bg-code-block: #f6f8fa;
 	--color-bg-inline-code-block: rgb(175 184 193 / 20%);
 	--color-gray: #6e7781;
-	--color-red: #cf222e;
+	--color-red: var(--editor-text-primary);
+	--color-blue: var(--editor-text-secondary);
 	--color-green: #18883a;
-	--color-blue: #0550ae;
 	--color-indigo: #0a3069;
 	--color-purple: #8250df;
 	--color-brown: #953800;
